--- a/main.html
+++ b/main.html
@@ -7,7 +7,30 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<table>
+		<thead>
+			<th>Table-Header 1</th>
+			<th>Table-Header 2</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Cell 1</td>
+				<td>Cell 2</td>
+			</tr>
+			<tr>
+				<td>Cell 4</td>
+				<td>Cell 5</td>
+			</tr>
+			<tr>
+				<td>Cell 7</td>
+				<td>Cell 8</td>
+			</tr>
+			<tr>
+				<td>Cell 9</td>
+				<td>Cell 10</td>
+			</tr>
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
